--- a/index.html
+++ b/index.html
@@ -1,483 +1,105 @@
 <html>
- <head>
-  <title>
-   MasterBullet
-  </title>
-  <script src="https://cdn.tailwindcss.com">
-  </script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-  <style>
-   @keyframes progress {
-    from {
-     width: 0%;
-    }
-    to {
-     width: 100%;
-    }
-   }
-   .progress-bar {
-    animation: progress 5m linear forwards;
-   }
-  </style>
- </head>
- <body class="bg-gray-900 text-white font-sans">
-  <div class="flex">
-   <!-- Sidebar -->
-   <div class="w-1/5 bg-black h-screen p-4">
-    <div class="text-center mb-6">
-     <h1 class="text-2xl font-bold">
-      MasterBullet 3
-     </h1>
+<head>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <script>
+        function updateWorkingStatus() {
+            document.getElementById('workingStatus').classList.add('text-green-500');
+        }
+    </script>
+</head>
+<body class="bg-gray-900 text-white font-sans">
+    <div class="flex">
+        <!-- Sidebar -->
+        <div class="w-1/5 bg-gray-800 h-screen p-4">
+            <div class="text-2xl font-bold mb-6">OPEN BULLET</div>
+            <div class="text-lg font-semibold mb-4">Total Data</div>
+            <ul class="space-y-2">
+                <li id="workingStatus" class="text-green-500">Working = 90%</li>
+                <li class="text-red-500">Failed = 5%</li>
+                <li class="text-yellow-500">Total Hits = No Data</li>
+                <li class="text-blue-300">Retried = 5%</li>
+            </ul>
+            <div class="text-lg font-semibold mt-6 mb-4">Manage</div>
+        </div>
+        <!-- Main Content -->
+        <div class="w-4/5 p-4">
+            <div class="text-xl font-bold mb-4">Dashboard Options:</div>
+            <div class="flex items-center space-x-2 mb-4">
+                <button class="bg-blue-500 text-white px-4 py-2 rounded">+ Add Group</button>
+                <button class="bg-green-500 text-white px-4 py-2 rounded">Import Proxies</button>
+                <button class="bg-red-500 text-white px-4 py-2 rounded">Start Proxies</button>
+                <button class="bg-orange-500 text-white px-4 py-2 rounded" onclick="updateWorkingStatus()">Hits</button>
+                <button class="bg-purple-500 text-white px-4 py-2 rounded">Configs</button>
+            </div>
+            <div class="mb-4">
+                <label for="pingSelection" class="block mb-2">Selection Pings:</label>
+                <select id="pingSelection" class="bg-gray-700 text-white p-2 rounded w-full">
+                    <option>&lt;&gt;</option>
+                    <option>100</option>
+                    <option>500</option>
+                    <option>1000</option>
+                </select>
+            </div>
+            <div class="mb-4">
+                <label for="mainTargetSelection" class="block mb-2">Selection Main Target:</label>
+                <select id="mainTargetSelection" class="bg-gray-700 text-white p-2 rounded w-full">
+                    <option>Dark Stocks</option>
+                    <option>Private Stocks</option>
+                    <option>PremiumStockers</option>
+                </select>
+            </div>
+            <div class="bg-gray-800 p-4 rounded mt-4">
+                <table class="w-full text-left">
+                    <thead>
+                        <tr>
+                            <th class="p-2">Name</th>
+                            <th class="p-2">Proxy</th>
+                            <th class="p-2">Status</th>
+                            <th class="p-2">Publisher</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="p-2">Netflix</td>
+                            <td class="p-2">******</td>
+                            <td class="p-2">Failed</td>
+                            <td class="p-2">PremiumStockers</td>
+                        </tr>
+                        <tr>
+                            <td class="p-2">Spotify</td>
+                            <td class="p-2">******</td>
+                            <td class="p-2">Running</td>
+                            <td class="p-2">PremiumStockers</td>
+                        </tr>
+                        <tr>
+                            <td class="p-2">Crunchyroll</td>
+                            <td class="p-2">******</td>
+                            <td class="p-2">Running</td>
+                            <td class="p-2">PremiumStockers</td>
+                        </tr>
+                        <tr>
+                            <td class="p-2">Primevideo</td>
+                            <td class="p-2">******</td>
+                            <td class="p-2">Pass</td>
+                            <td class="p-2">PremiumStockers</td>
+                        </tr>
+                        <tr>
+                            <td class="p-2">Ubisoft</td>
+                            <td class="p-2">******</td>
+                            <td class="p-2">Running</td>
+                            <td class="p-2">PremiumStockers</td>
+                        </tr>
+                        <tr>
+                            <td class="p-2">All in One</td>
+                            <td class="p-2">******</td>
+                            <td class="p-2">Pass</td>
+                            <td class="p-2">PremiumStockers</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
-    <ul class="space-y-4">
-     <li class="flex items-center space-x-3 hover:bg-gray-800 p-2 rounded">
-      <i class="fas fa-home">
-      </i>
-      <span>
-       Home
-      </span>
-     </li>
-     <li class="flex items-center space-x-3 hover:bg-gray-800 p-2 rounded">
-      <i class="fas fa-briefcase">
-      </i>
-      <span>
-       Jobs
-      </span>
-     </li>
-     <li class="flex items-center space-x-3 hover:bg-gray-800 p-2 rounded">
-      <i class="fas fa-desktop">
-      </i>
-      <span>
-       Monitor
-      </span>
-     </li>
-     <li class="flex items-center space-x-3 hover:bg-gray-800 p-2 rounded">
-      <i class="fas fa-network-wired">
-      </i>
-      <span>
-       Proxies
-      </span>
-     </li>
-     <li class="flex items-center space-x-3 hover:bg-gray-800 p-2 rounded">
-      <i class="fas fa-file-alt">
-      </i>
-      <span>
-       Wordlists
-      </span>
-     </li>
-     <li class="flex items-center space-x-3 hover:bg-gray-800 p-2 rounded">
-      <i class="fas fa-bullseye">
-      </i>
-      <span>
-       Hits
-      </span>
-     </li>
-     <li class="flex items-center space-x-3 hover:bg-gray-800 p-2 rounded">
-      <i class="fas fa-cogs">
-      </i>
-      <span>
-       Configs
-      </span>
-     </li>
-     <li class="flex items-center space-x-3 hover:bg-gray-800 p-2 rounded">
-      <i class="fas fa-database">
-      </i>
-      <span>
-       Metadata
-      </span>
-     </li>
-     <li class="flex items-center space-x-3 hover:bg-gray-800 p-2 rounded">
-      <i class="fas fa-book">
-      </i>
-      <span>
-       Readme
-      </span>
-     </li>
-     <li class="flex items-center space-x-3 hover:bg-gray-800 p-2 rounded">
-      <i class="fas fa-layer-group">
-      </i>
-      <span>
-       Stacker
-      </span>
-     </li>
-     <li class="flex items-center space-x-3 hover:bg-gray-800 p-2 rounded">
-      <i class="fas fa-code">
-      </i>
-      <span>
-       LoliCode
-      </span>
-     </li>
-     <li class="flex items-center space-x-3 hover:bg-gray-800 p-2 rounded">
-      <i class="fas fa-cog">
-      </i>
-      <span>
-       Settings
-      </span>
-     </li>
-    </ul>
-   </div>
-   <!-- Main Content -->
-   <div class="w-4/5 p-4">
-    <div class="flex justify-between mb-4">
-     <div>
-      <h2 class="text-xl font-bold">
-       Job options
-      </h2>
-      <div class="flex items-center space-x-2 mt-2">
-       <div>
-        <p>
-         Config: Risk by Risk
-        </p>
-        <p>
-         Data pool: Wordlist (wordlist)
-        </p>
-        <p>
-         Proxy mode: On
-        </p>
-        <p>
-         Proxy sources:
-         <a class="text-blue-500" href="#">
-          Group (Proxies)
-         </a>
-        </p>
-        <p>
-         Hit outputs:
-         <a class="text-blue-500" href="#">
-          Database
-         </a>
-        </p>
-        <p>
-         Skip: 0
-        </p>
-        <p>
-         Bots: 2
-        </p>
-       </div>
-      </div>
-     </div>
-     <div>
-      <h2 class="text-xl font-bold">
-       Data stats
-      </h2>
-      <div class="mt-2">
-       <p>
-        Tested: 1
-       </p>
-       <p class="text-green-500">
-        Hits: 0
-       </p>
-       <p class="text-yellow-500">
-        Custom: 0
-       </p>
-       <p class="text-red-500">
-        Fails: 0
-       </p>
-       <p>
-        Invalid: 0
-       </p>
-       <p>
-        Retried: 0
-       </p>
-       <p>
-        Banned: 0
-       </p>
-       <p>
-        To check: 1
-       </p>
-       <p>
-        Errors: 0
-       </p>
-      </div>
-     </div>
-     <div>
-      <h2 class="text-xl font-bold">
-       Proxy stats
-      </h2>
-      <div class="mt-2">
-       <p>
-        Total: 29
-       </p>
-       <p class="text-green-500">
-        Alive: 29
-       </p>
-       <p class="text-red-500">
-        Bad: 0
-       </p>
-       <p>
-        Banned: 0
-       </p>
-      </div>
-     </div>
-     <div>
-      <h2 class="text-xl font-bold">
-       Other stats
-      </h2>
-      <div class="mt-2">
-       <p>
-        CPM: 1
-       </p>
-       <p>
-        Captcha credit: 0
-       </p>
-       <p>
-        Elapsed: 0 day(s) 00:00:12
-       </p>
-       <p>
-        Remaining: 0 day(s) 00:03:47
-       </p>
-       <p>
-        Progress: 1 / 5 (20.00%)
-       </p>
-      </div>
-     </div>
-    </div>
-    <div class="flex items-center space-x-2 mb-4">
-     <button class="bg-green-500 text-black px-4 py-2 rounded" onclick="window.location.href='https://example.com'">
-      Go to DataBase
-     </button>
-     <button class="bg-red-500 text-black px-4 py-2 rounded" onclick="window.location.href='https://github.com/masterbullet/database'">
-      Grabbing Database
-     </button>
-     <div class="flex items-center justify-center">
-      <img alt="Loading" class="w-12 h-12" src="https://example.com/loading.gif"/>
-     </div>
-    </div>
-    <div class="bg-gray-800 p-4 rounded mb-4">
-     <div class="grid grid-cols-4 gap-4">
-      <div>
-       <h3 class="font-bold">
-        Name
-       </h3>
-       <p>
-        PrimeVideo
-       </p>
-      </div>
-      <div>
-       <h3 class="font-bold">
-        Proxies
-       </h3>
-       <p>
-        29
-       </p>
-      </div>
-      <div>
-       <h3 class="font-bold">
-        Status
-       </h3>
-       <p>
-        Running
-       </p>
-      </div>
-      <div>
-       <h3 class="font-bold">
-        Data
-       </h3>
-       <p>
-        Backing up
-       </p>
-      </div>
-     </div>
-    </div>
-    <div class="bg-gray-800 p-4 rounded mb-4">
-     <div class="grid grid-cols-4 gap-4">
-      <div>
-       <h3 class="font-bold">
-        Name
-       </h3>
-       <p>
-        Netflix
-       </p>
-      </div>
-      <div>
-       <h3 class="font-bold">
-        Proxies
-       </h3>
-       <p>
-        29
-       </p>
-      </div>
-      <div>
-       <h3 class="font-bold">
-        Status
-       </h3>
-       <p>
-        Failed
-       </p>
-      </div>
-      <div>
-       <h3 class="font-bold">
-        Data
-       </h3>
-       <p>
-        Backing up
-       </p>
-      </div>
-     </div>
-    </div>
-    <div class="bg-gray-800 p-4 rounded mb-4">
-     <div class="grid grid-cols-4 gap-4">
-      <div>
-       <h3 class="font-bold">
-        Name
-       </h3>
-       <p>
-        Spotify
-       </p>
-      </div>
-      <div>
-       <h3 class="font-bold">
-        Proxies
-       </h3>
-       <p>
-        29
-       </p>
-      </div>
-      <div>
-       <h3 class="font-bold">
-        Status
-       </h3>
-       <p>
-        Running
-       </p>
-      </div>
-      <div>
-       <h3 class="font-bold">
-        Data
-       </h3>
-       <p>
-        Backing up
-       </p>
-      </div>
-     </div>
-    </div>
-    <div class="bg-gray-800 p-4 rounded mb-4">
-     <div class="grid grid-cols-4 gap-4">
-      <div>
-       <h3 class="font-bold">
-        Name
-       </h3>
-       <p>
-        Crunchyroll
-       </p>
-      </div>
-      <div>
-       <h3 class="font-bold">
-        Proxies
-       </h3>
-       <p>
-        29
-       </p>
-      </div>
-      <div>
-       <h3 class="font-bold">
-        Status
-       </h3>
-       <p>
-        Running
-       </p>
-      </div>
-      <div>
-       <h3 class="font-bold">
-        Data
-       </h3>
-       <p>
-        Backing up
-       </p>
-      </div>
-     </div>
-    </div>
-    <div class="bg-gray-800 p-4 rounded mb-4">
-     <div class="grid grid-cols-4 gap-4">
-      <div>
-       <h3 class="font-bold">
-        Name
-       </h3>
-       <p>
-        Discord Nitro
-       </p>
-      </div>
-      <div>
-       <h3 class="font-bold">
-        Proxies
-       </h3>
-       <p>
-        29
-       </p>
-      </div>
-      <div>
-       <h3 class="font-bold">
-        Status
-       </h3>
-       <p>
-        Running
-       </p>
-      </div>
-      <div>
-       <h3 class="font-bold">
-        Data
-       </h3>
-       <p>
-        Backing up
-       </p>
-      </div>
-     </div>
-    </div>
-    <div class="bg-gray-800 p-4 rounded mb-4">
-     <div class="grid grid-cols-4 gap-4">
-      <div>
-       <h3 class="font-bold">
-        Name
-       </h3>
-       <p>
-        VPNS By @MrPlus
-       </p>
-      </div>
-      <div>
-       <h3 class="font-bold">
-        Proxies
-       </h3>
-       <p>
-        29
-       </p>
-      </div>
-      <div>
-       <h3 class="font-bold">
-        Status
-       </h3>
-       <p>
-        Running
-       </p>
-      </div>
-      <div>
-       <h3 class="font-bold">
-        Data
-       </h3>
-       <p>
-        Backing up
-       </p>
-      </div>
-     </div>
-    </div>
-    <div class="flex space-x-2 mb-4 mt-4">
-     <button class="bg-blue-700 text-white px-4 py-2 rounded">
-      Copy data
-     </button>
-     <button class="bg-blue-700 text-white px-4 py-2 rounded">
-      Copy data + capture
-     </button>
-     <button class="bg-blue-700 text-white px-4 py-2 rounded">
-      Send to debugger
-     </button>
-     <button class="bg-blue-700 text-white px-4 py-2 rounded">
-      Show full log
-     </button>
-     <select class="bg-gray-800 text-white px-4 py-2 rounded">
-      <option>
-       Hits
-      </option>
-     </select>
-    </div>
-   </div>
-  </div>
- </body>
+</body>
 </html>
