--- a/index.html
+++ b/index.html
@@ -2,46 +2,27 @@
 <head>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <style>
+        .cool-font {
+            font-family: 'Roboto', sans-serif;
+        }
+    </style>
     <script>
         let currentEditingFile = '';
-        let fileContents = {
-            'test.txt': 'This is the content of test.txt',
-            'new_hit.txt': 'New Hit Content'
-        };
-
-        const GITHUB_TOKEN = 'YOUR_GITHUB_PERSONAL_ACCESS_TOKEN';
-        const REPO_OWNER = 'YOUR_GITHUB_USERNAME';
-        const REPO_NAME = 'YOUR_REPOSITORY_NAME';
 
         function updateWorkingStatus() {
             document.getElementById('workingStatus').classList.add('text-green-500');
         }
 
-        async function createNewHitFile() {
-            const fileName = 'new_hit.txt';
-            const fileContent = 'New Hit Content';
-            fileContents[fileName] = fileContent;
-            updateFileList(fileName);
-
-            const base64Content = btoa(fileContent);
-
-            const response = await fetch(`https://api.github.com/repos/${REPO_OWNER}/${REPO_NAME}/contents/${fileName}`, {
-                method: 'PUT',
-                headers: {
-                    'Authorization': `token ${GITHUB_TOKEN}`,
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    message: `Create ${fileName}`,
-                    content: base64Content
-                })
-            });
-
-            if (response.ok) {
-                alert(`${fileName} created successfully in the GitHub repository!`);
-            } else {
-                alert(`Failed to create ${fileName} in the GitHub repository.`);
-            }
+        function createNewHitFile() {
+            const element = document.createElement('a');
+            const file = new Blob(['New Hit Content'], { type: 'text/plain' });
+            element.href = URL.createObjectURL(file);
+            element.download = 'new_hit.txt';
+            document.body.appendChild(element);
+            element.click();
+            updateFileList('new_hit.txt');
         }
 
         function updateFileList(fileName) {
@@ -60,7 +41,7 @@
 
         function editFileContent(fileName) {
             currentEditingFile = fileName;
-            const fileContent = fileContents[fileName] || ''; // Get the content of the file
+            const fileContent = `Content of ${fileName}`; // Placeholder content
             document.getElementById('fileEditor').value = fileContent;
         }
 
@@ -69,16 +50,18 @@
             const newName = prompt("Enter new name for the file:", currentName);
             if (newName && newName.trim() !== "") {
                 listItem.textContent = newName.trim();
-                fileContents[newName.trim()] = fileContents[currentName];
-                delete fileContents[currentName];
                 currentEditingFile = newName.trim();
             }
         }
 
         function saveFileContent() {
             const content = document.getElementById('fileEditor').value;
-            fileContents[currentEditingFile] = content;
-            alert(`Content of ${currentEditingFile} saved!`);
+            const element = document.createElement('a');
+            const file = new Blob([content], { type: 'text/plain' });
+            element.href = URL.createObjectURL(file);
+            element.download = currentEditingFile;
+            document.body.appendChild(element);
+            element.click();
         }
     </script>
 </head>
@@ -86,7 +69,7 @@
     <div class="flex">
         <!-- Sidebar -->
         <div class="w-1/5 bg-gray-800 h-screen p-4">
-            <div class="text-2xl font-bold mb-6">MasterBullet 2</div>
+            <div class="text-2xl font-bold mb-6 cool-font">MasterProxy 3</div>
             <div class="text-lg font-semibold mb-4">Total Data</div>
             <ul class="space-y-2">
                 <li id="workingStatus" class="text-green-500">Working = 90%</li>
@@ -94,9 +77,12 @@
                 <li class="text-yellow-500">Total Hits = No Data</li>
                 <li class="text-blue-300">Retried = 5%</li>
             </ul>
-            <button class="bg-blue-500 text-white px-4 py-2 rounded mt-6 mb-4" onclick="window.location.href='https://your-database-url.com'">Database</button>
-            <ul id="fileList" class="space-y-2">
-            </ul>
+            <div class="text-lg font-semibold mt-6 mb-4">Proxy Data</div>
+            <div class="bg-gray-700 p-4 rounded">
+                <ul id="fileList" class="space-y-2">
+                    <!-- List of files will be dynamically added here -->
+                </ul>
+            </div>
         </div>
         <!-- Main Content -->
         <div class="w-4/5 p-4">
@@ -107,6 +93,7 @@
                 <button class="bg-red-500 text-white px-4 py-2 rounded">Start Proxies</button>
                 <button class="bg-orange-500 text-white px-4 py-2 rounded" onclick="updateWorkingStatus()">Hits</button>
                 <button class="bg-purple-500 text-white px-4 py-2 rounded">Configs</button>
+                <button class="bg-blue-500 text-white px-4 py-2 rounded" onclick="createNewHitFile()">Proxy Gen</button>
             </div>
             <div class="mb-4">
                 <label for="pingSelection" class="block mb-2">Selection Pings:</label>
@@ -228,6 +215,11 @@
                         </tr>
                     </tbody>
                 </table>
+            </div>
+            <div class="bg-gray-800 p-4 rounded mt-4">
+                <div class="text-lg font-semibold mb-4">File Editor</div>
+                <textarea id="fileEditor" class="w-full bg-gray-700 text-white p-2 rounded" rows="10" placeholder="Edit your file content here..."></textarea>
+                <button class="bg-green-500 text-white px-4 py-2 rounded mt-2" onclick="saveFileContent()">Save</button>
             </div>
         </div>
     </div>
